--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -32,7 +32,7 @@ jobs:
         uses: actions/upload-artifact@v3
         with:
           name: build
-          path: output/
+          path: .output/
 
   deploy:
     runs-on: ubuntu-latest
@@ -42,11 +42,11 @@ jobs:
         uses: actions/download-artifact@v3
         with:
           name: build
-          path: output
+          path: .output
 
       # Tuỳ chọn deploy lên GitHub Pages
       - name: Deploy to GitHub Pages
         uses: peaceiris/actions-gh-pages@v3
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
-          publish_dir: ./output
+          publish_dir: ./.output
