--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -33,6 +33,7 @@ jobs:
         with:
           name: build
           path: ./.output
+          include-hidden-files: true
 
   deploy:
     runs-on: ubuntu-latest
